# MultiStyle_FundusLesionSegmentation

./: .gitignore  LICENSE  README.md  bash_script.sh  generate_sh_script.py  pyproject.toml  train_script.sh  upload_hf_script.sh
configs/: config.yaml  config_cssn.yaml  data_config.yaml  wandb_sweep.yaml
figures/: adaptive_style.py  loss_interpolation.py  semantic_segmentation.py  uncertainty.py
notebooks/: clean_checkpoints.ipynb  dataloader_test.ipynb  plot.ipynb  test_models.ipynb  wandb_API.ipynb
notebooks/datasets_characterizations/: ddr.pkl  ddr_global.pkl  distribution_plot.ipynb  fgadr_global.pkl  idrid_global.pkl  messidor_global.pkl  retles_global.pkl
notebooks/probe_position/: plot.ipynb
src/adptSeg/adaptation/: adversarial.py  const.py  encoder_wrapper.py  model_wrapper.py  probe.py  utils.py
src/adptSeg/scripts/: conversion_test.py  dr_grading.py  generate_bash.py  linear_probing.py  tjdr_testing.py
src/adptSeg/utils/: checkpoints.py
src/fundseg/data/: __init__.py  data_factory.py  datamodule.py  datasets.py  utils.py
src/fundseg/legacy/: __init__.py  utils.py
src/fundseg/models/: __init__.py  attn_guided_uncert_unet.py  base_model.py  c_ssn.py  ffunet.py  lesion_net.py  lseg.py  pcmnet.py  smp_model.py  voronoi_cnn.py
src/fundseg/models/DEviS/: criterions.py
src/fundseg/models/utils/: blocks.py  losses.py  metric.py  probs_style.py  upsampling.py
src/fundseg/scripts/: test.py  train.py  train_cssn.py  train_script.sh  upload_to_hf.py
src/fundseg/utils/: callbacks.py  checkpoints.py  colors.py  hf_api.py  logger.py  runs.py
src/ui/: inference.py  utils.py
src/ui/pages/: uncertainty.py
ui/: app.py  inference.py  utils.py
ui/pages/: uncertainty.py
