[project]
name = "AdaptiveFundusSegmentation"
version = "0.1.0"
description = "Adaptive-style for lesions segmentation in fundus"
dependencies = [
    "python>=3.9",
    "numpy",
    "opencv-python-headless",
    "pandas",
    "pydantic",
    "scikit-learn",
    "torch",
    "torch-geometric",
    "lightning",
    "torchmetrics",
    "nntools @ git+https://github.com/ClementPla/NNTools@attrs_dataset",
    "fundus-data-toolkit @ git+https://github.com/ClementPla/fundus-data-toolkit",
    "wandb",
    "attrs",
    "albumentations",
    "torchseg"
]
readme = "README.md"

[project.scripts]
train = "fundseg.scripts.train:main"
train_linearprobe = "adptSeg.scripts.linear_probing:main"
test_aptos_conversion = "adptSeg.scripts.conversion_test:test_aptos_conversion"
test_conversion_vs_specialized = "adptSeg.scripts.conversion_test:test_conversion_vs_specialized"
test_ddr_model_trained_on_idrid_retles = "adptSeg.scripts.conversion_test:test_ddr_model_trained_on_idrid_retles"

[project.optional-dependencies]
dev = ["black", "ruff", "pytest", "pytest-cov", "pre-commit"]

notebook = ["ipykernel", "matplotlib"]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "RUF", "TCH"]
fixable = ["I", "RUF100", "TCH"]
fix = true
